[gd_scene load_steps=5 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Menus/MainMenuImage.PNG" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.698039, 0.643137, 0.643137, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 105.0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Deckbuild Arena [/center]"
text = " Deckbuild Arena "

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 1024.0
margin_bottom = 129.0
alignment = 1

[node name="StartGame" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 394.0
margin_right = 477.0
margin_bottom = 20.0
text = "Start Game"

[node name="HowToPlay" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 481.0
margin_right = 568.0
margin_bottom = 20.0
text = "How to play"

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 572.0
margin_right = 629.0
margin_bottom = 20.0
text = "Credits"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 1024.0
margin_bottom = 489.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 493.0
margin_right = 1024.0
margin_bottom = 599.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center] A game by KnightAdz.
Made for Godot Wild Jam #31
Using the wildcard \"U wot m8: Ignore the theme completely\" [/center]"
text = " A game by KnightAdz.
Made for Godot Wild Jam #31
Using the wildcard \"U wot m8: Ignore the theme completely\" "
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
